--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,10 @@ dependencies:
   pedantic: ^1.11.1
   characters: ^1.2.0
   diff_match_patch: ^0.4.1
-  i18n_extension: ^6.0.0
+  awesome_snackbar_content:
+    git:
+      url: https://github.com/Nightbl927/i18n_extension.git
+      ref: main # branch name
   device_info_plus: ^8.0.0
   platform: ^3.1.0
   pasteboard: ^0.2.0
