--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   pedantic: ^1.11.1
   characters: ^1.2.0
   diff_match_patch: ^0.4.1
-  awesome_snackbar_content:
+  i18n_extension:
     git:
       url: https://github.com/Nightbl927/i18n_extension.git
       ref: master # branch name
