--- a/flutter_quill_extensions/pubspec.yaml
+++ b/flutter_quill_extensions/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_quill: ^6.0.0
+  flutter_quill:
+    git:
+      url: https://github.com/Nightbl927/flutter-quill.git
+      ref: master # branch name
 
   image_picker: ^0.8.5+3
   photo_view: ^0.14.0
