--- a/flutter_quill_extensions/pubspec.yaml
+++ b/flutter_quill_extensions/pubspec.yaml
@@ -22,7 +22,10 @@ dependencies:
   video_player: ^2.4.2
   youtube_player_flutter: ^8.1.1
   gallery_saver: ^2.3.2
-  math_keyboard: ^0.1.6
+  math_keyboard:
+    git:
+      url: https://github.com/Nightbl927/math_keyboard.git
+      ref: main # branch name
   string_validator: ^0.3.0
 
 #dependency_overrides:
